--- a/views/partials/_navbar.jade
+++ b/views/partials/_navbar.jade
@@ -17,7 +17,7 @@ nav.navbar.navbar-inverse.navbar-custom
               if (!user)  
                 a(href='/auth') home
               else
-                a(href='/profile') home
+                a(href='/home') home
             |         
             li
               a(href='/profile') profile
