--- a/views/user.jade
+++ b/views/user.jade
@@ -75,3 +75,4 @@ block content
                                   while i<=5
                                     span.glyphicon.glyphicon-star-empty
                                     - i++
+                                h5(style='text-align:right')= moment(review.datePublished).fromNow()
