--- a/views/profile.jade
+++ b/views/profile.jade
@@ -5,7 +5,7 @@ block content
   div.container-fluid
       div.col-xs-6.col-sm-4.text-center.profile-panel
         h3 
-          b your reaDig profile
+          b your reaDigs profile
           br
           br
           .info-card
