--- a/views/partials/_footer.jade
+++ b/views/partials/_footer.jade
@@ -1,20 +1,16 @@
-.wrapper
+nav.navbar.navbar-inverse.navbar-static-bottom
   .container.text-center.footer
-      .row
-        .col-lg-12
-            ul.nav.nav-pills.nav-justified
-              li
-                a(href='/about') about us                
-              li
-                a(href='/contact') contact                 
-              li
-                a(href='/faqs') FAQs
-      .row
-        .col-lg-12
-          ul.nav.nav-pills.nav-justified
-              li
-                a(href='/terms') terms of service                
-              li
-                a(href='/privacy') privacy notice                 
-              li
-                a(href='/') reaDig &copy; 2015
+    ul.nav.nav-pills.nav-justified
+      li
+        a(href='/about') about us                
+      li
+        a(href='/contact') contact                 
+      li
+        a(href='/faqs') FAQs
+    ul.nav.nav-pills.nav-justified
+      li
+        a(href='/terms') terms of service                
+      li
+        a(href='/privacy') privacy notice                 
+      li
+        a(href='/') reaDigs &copy; 2015
