--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,7 +7,7 @@ head
     link(href='//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css', rel='stylesheet')  
     script(src='//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js', type='text/javascript')
     script(src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js')
-    link(href='http://fonts.googleapis.com/css?family=Karla', rel='stylesheet', type='text/css')
+    link(href='http://fonts.googleapis.com/css?family=Roboto', rel='stylesheet', type='text/css')
     link(href='/stylesheets/bootstrap-social.css', rel='stylesheet')
     link(href='/stylesheets/style.css', rel='stylesheet')
 
